[tool.poetry]
name = "radium"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sofronov <profos24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^5.0.0"
wemake-python-styleguide = "^0.19.2"
aiohttp = "^3.9.3"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
nitpick = "^0.35.0"

[tool.nitpick]
style = "/nitpick/all.toml"

[tool.poetry.group.dev.dependencies]
nitpick = "^0.35.0"
wemake-python-styleguide = "^0.18.0"
flake8-pytest-style = "^1.7.2"
flake8-annotations = "^3.0.1"
flake8-logging-format = "^0.9.0"
flake8-spellcheck = "^0.28.0"
isort = "^5.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
Faker = "^20.1.0"
pytest-snapshot = "^0.9.0"

[tool.poetry.group.test.dependencies.pytest-xdist]
extras = ["psutil"]
version = "^3.5.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
